Why immutable state

--- a/src/Tutortial/Tutorial.html
+++ b/src/Tutortial/Tutorial.html
@@ -23,6 +23,11 @@
                     JavaScript encodeURI() vs encodeURIComponent() and decodeuricomponent()
                 </a>
             </li>
+            <li>
+                <a href="https://www.freecodecamp.org/news/handling-state-in-react-four-immutable-approaches-to-consider-d1f5c00249d5/">
+                    Handling State in React: Four Immutable Approaches to Consider | Why using setState
+                </a>
+            </li>
         </ul>
     </section>  
 </body>
